2013-09-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Fields.wrl:
	* PointSet.wrl:
	* CADLayer.wrl:
	* IndexedLineSet.wrl: 

2013-09-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Connectors.wrl:
	* FillProperties.wrl:
	* IndexedLineSet.wrl: 

2013-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Texture.wrl:
	* LineProperties.wrl:
	* sobel-ComposedShader.wrl: 

2013-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* lena.jpg:
	* Toon.wrl:
	* Test.wrl:
	* Phong.wrl:
	* Water2.wrl:
	* Water1.wrl:
	* Texture.wrl:
	* Lambert.wrl:
	* TwoCylinders.wrl:
	* ProgramShader.wrl:
	* ComposedShader.wrl:
	* sobel-ComposedShader.wrl: 

2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* NodeIndex.wrl:
	* NodeIndex2.wrl: 

2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ProgramShader.wrl: 

2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Test.wrl:
	* Phong.wrl:
	* Lambert.wrl:
	* ProgramShader.wrl: 

2013-09-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Test.wrl: 

2013-09-01  Holger Seelig  <holger.seelig@yahoo.de>

	* KeySensor.wrl: 

2013-08-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Fields.wrl:
	* KeySensor.wrl: 

2013-08-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Test.wrl:
	* Water2.wrl:
	* Texture.wrl:
	* MovieTexture.wrl:
	* ComposedCubeMapTexture.wrl: 

2013-08-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Simple.wrl:
	* SimpleExternproto.wrl: 

2013-08-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* hellpit.wrl:
	* iron.gif:
	* water.gif:
	* metal.gif: 

2013-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl: 

2013-08-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* NodeIndex2.wrl:
	* MovieTexture.wrl:
	* replaceWorld2.wrl: 

2013-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* NodeIndex2.wrl: 
